[tool.poetry]
name = "pytest-jinja"
version = "0.1.0"
description = "A plugin to generate customizable jinja-based HTML reports in pytest"
authors = ["Gabriele Bonetti <gabriele.bonetti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "*"
pytest = "^5.2.2"
pytest-metadata = "*"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
tox = "^3.14.0"

[tool.poetry.plugins]
[tool.poetry.plugins."pytest11"]
"pytest-jinja" = "pytest_jinja.pytest_jinja"

[build-system]
requires = ["poetry>=0.12", "setuptools_scm"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
