[tool.poetry]
name = "pytest-jinja"
version = "0.1.0"
description = "A plugin to generate customizable jinja-based HTML reports in pytest"
authors = ["Gabriele Bonetti <gabriele.bonetti@gmail.com>"]
license = "GPL-2.0"
readme = "README.rst"
homepage = "https://github.com/g-bon/pytest-jinja"
repository = "https://github.com/g-bon/pytest-jinja"
keywords = ["py.test", "pytest", "html", "testing", "report"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "*"
pytest = "^5.2.2"
pytest-metadata = "*"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
tox = "^3.14.0"

[tool.poetry.plugins]
[tool.poetry.plugins."pytest11"]
"pytest-jinja" = "pytest_jinja.pytest_jinja"

[build-system]
requires = ["poetry>=0.12", "setuptools_scm"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
